# gpt-knowledge-builder

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  config.example.yaml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: developer-setup.md  macos-build.md  privacy-and-data-handling.md  product-capabilities.md  release-process.md  user-guide.md  windows-build.md
knowledge_builder/: __init__.py  __main__.py  analysis.py  chunking.py  cli.py  compiler_models.py  config.py  engine.py  extractors.py  gpt_compiler.py  gui.py  gui_entry.py  manifest.py  models.py  naming.py  normalization.py  outputs.py  scan_docs.py  structured.py  synthesis.py  taxonomy.py  utils.py  version.py  writer.py
knowledge_builder/export/: __init__.py  debug_package.py  gpt_package.py  zipper.py
knowledge_builder/knowledge/: __init__.py  common.py  entities.py  facts.py  file_guide.py  glossary.py  instructions.py  procedures.py  synthesizer.py
knowledge_builder/project/: __init__.py  cli.py  enrichment.py  models.py  pipeline.py  previews.py  store.py
knowledge_builder/scanner/: __init__.py  batch.py  cli.py  config.py  discovery.py  logging_utils.py  models.py  pipeline.py  routing.py
knowledge_builder/ui/: models.py  theme.py  widgets.py
packaging/macos/: GPTKnowledgeBuilder.spec  app_launcher.py
packaging/macos/assets/: app.icns
packaging/windows/: GPTKnowledgeBuilder.iss  GPTKnowledgeBuilder.spec  app_launcher.py
scripts/: build_macos.sh  build_windows.ps1  render_github_screenshot.py
tests/: fixture_builders.py  test_batch_mode.py  test_cli.py  test_compiler.py  test_discovery.py  test_extractors.py  test_gui.py  test_previews.py  test_project_workflow.py  test_release_repo.py  test_synthesis.py  test_windows_packaging.py
